--- a/view/ppit-document/public/home.phtml
+++ b/view/ppit-document/public/home.phtml
@@ -1,7 +1,7 @@
 <?php
 $title = $homeSpecs['title'][$context->getLocale()];
 $this->headTitle($title);
-echo $context->getHeaderCode();
+echo $this->partial('/partials/header');
 ?>
 <div>&nbsp;</div>
 
