--- a/view/ppit-document/public/home.phtml
+++ b/view/ppit-document/public/home.phtml
@@ -93,7 +93,7 @@ echo $this->partial('/partials/header');
 	<?php endif;?>
 			
 									<div><?php echo $document->summary ?></div>
-									<div style="text-align: center"><a href="<?php echo $this->url('public/displayPage', array('directory' => $frontProduct['directory'], 'name' => $frontProduct['name'])) ?>">En savoir plus...</a></div>
+									<div style="text-align: center"><a href="<?php echo $this->url('public/displayPage', array('directory' => $frontProduct['directory'], 'name' => $frontProduct['name'])) ?>">Lire la suite...</a></div>
 							</div>
 				        </div>
 						<div class="panel-heading front-page"><br><br>
