--- a/view/ppit-document/public/display-page.phtml
+++ b/view/ppit-document/public/display-page.phtml
@@ -28,15 +28,21 @@ echo $this->partial('/partials/header');
 	
 	<?php if ($documentPart->image) : ?>
 						<div align="center">
+		<?php if (array_key_exists('href', $documentPart->image)) : ?>
+							<a href="<?php echo $documentPart->image['href'] ?>" <?php if (array_key_exists('target', $documentPart->image)) echo 'target="'.$documentPart->image['target'].'"' ?>>
+		<?php endif;?>
 							<img 
-							<?php foreach ($documentPart->image as $attr => $value) : ?>
-								<?php if ($attr == 'src') : ?>
+		<?php foreach ($documentPart->image as $attr => $value) : ?>
+			<?php if ($attr == 'src') : ?>
 								src="<?php echo $this->basePath($value) ?>"
-								<?php else : ?>
+			<?php elseif ($attr != 'href' && $attr != 'target') : ?>
 								<?php echo $attr ?>="<?php echo $value ?>"
-								<?php endif;?>
-							<?php endforeach;?>
+			<?php endif;?>
+		<?php endforeach;?>
 							/>
+		<?php if (array_key_exists('href', $documentPart->image)) : ?>
+							</a>
+		<?php endif;?>
 						</div>
 	<?php endif;?>
 			
@@ -48,11 +54,11 @@ echo $this->partial('/partials/header');
 	<?php foreach ($content['actions'] as $actionId => $action) : ?>
 		<?php $href = $action['href'] ?>
 		<?php if ($href['type'] == 'url') : ?> 
-						<button type="button" class="btn btn-default action-btn" id="<?php echo $actionId ?>" title="<?php echo $action['labels'][$context->getLocale()] ?>" onClick="location_href('<?php echo $actionId ?>', '<?php echo $href['value'] ?>')">
+						<button type="button" class="btn btn-success action-btn" id="<?php echo $actionId ?>" title="<?php echo $action['labels'][$context->getLocale()] ?>" onClick="location_href('<?php echo $actionId ?>', '<?php echo $href['value'] ?>')">
 		<?php elseif ($href['type'] == 'route') : ?>
-						<button type="button" class="btn btn-default action-btn" id="<?php echo $actionId ?>" title="<?php echo $action['labels'][$context->getLocale()] ?>" onClick="showForm('<?php echo $actionId ?>', '<?php echo $this->url($href['value'], $href['params'], $href['urlParams']) ?>')">
+						<button type="button" class="btn btn-success action-btn" id="<?php echo $actionId ?>" title="<?php echo $action['labels'][$context->getLocale()] ?>" onClick="showForm('<?php echo $actionId ?>', '<?php echo $this->url($href['value'], $href['params'], $href['urlParams']) ?>')">
 		<?php elseif ($href['type'] == 'redirect') : ?>
-						<button type="button" class="btn btn-default action-btn" id="<?php echo $actionId ?>" title="<?php echo $action['labels'][$context->getLocale()] ?>" onClick="location_href('<?php echo $actionId ?>', '<?php echo $this->url($href['value'], $href['params']).$href['urlParams'] ?>')">
+						<button type="button" class="btn btn-success action-btn" id="<?php echo $actionId ?>" title="<?php echo $action['labels'][$context->getLocale()] ?>" onClick="location_href('<?php echo $actionId ?>', '<?php echo $this->url($href['value'], $href['params']).$href['urlParams'] ?>')">
 		<?php endif;?>
 							<?php if (isset($action['glyphicon'])) : ?>
 							<span class="glyphicon glyphicon-<?php echo $action['glyphicon'] ?>"></span>&nbsp;
@@ -62,6 +68,35 @@ echo $this->partial('/partials/header');
 	<?php endforeach ?>
 					</div>
 <?php endif;?>
+
+<?php foreach ($credentials as $identifier => $credential) : ?>
+					<div>&nbsp;</div>
+					<h3 style="text-align:center"><?php echo $this->translate('Credentials', 'ppit-document', $context->getLocale())?></h3>
+					<div>&nbsp;</div>
+					<div>
+	<?php if ($credential->image) : ?>
+						<div align="center">
+		<?php if (array_key_exists('href', $credential->image)) : ?>
+							<a href="<?php echo $credential->image['href'] ?>" <?php if (array_key_exists('target', $credential->image)) echo 'target="'.$credential->image['target'].'"' ?>>
+		<?php endif;?>
+							<img 
+		<?php foreach ($credential->image as $attr => $value) : ?>
+			<?php if ($attr == 'src') : ?>
+								src="<?php echo $this->basePath($value) ?>"
+			<?php elseif ($attr != 'href' && $attr != 'target') : ?>
+								<?php echo $attr ?>="<?php echo $value ?>"
+			<?php endif;?>
+		<?php endforeach;?>
+							/>
+		<?php if (array_key_exists('href', $credential->image)) : ?>
+							</a>
+		<?php endif;?>
+						</div>
+	<?php endif;?>
+					</div>
+					<div><?php echo $credential->summary ?></div>
+					<div style="text-align: center"><a href="<?php echo $this->url('public/displayPage', array('directory' => 'credentials', 'name' => $identifier)) ?>">Lire la suite</a></div>
+<?php endforeach;?>
 					<div>&nbsp;</div>
 					<div>&nbsp;</div>
 				</div>
