--- a/view/ppit-document/public/display-page.phtml
+++ b/view/ppit-document/public/display-page.phtml
@@ -11,7 +11,7 @@ echo $this->partial('/partials/header');
 <!-- Front product 1 -->
 <div class="row">
 
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-md-8 col-md-offset-2">
         <div class="panel panel-default">
             <div class="panel-heading front-page">
                 <div id="front_product_1_title"><?php if (array_key_exists('date',$document->properties)) echo $context->decodeDate($document->properties['date']).': ' ?><?php echo $document->properties['title'] ?></div>
@@ -176,7 +176,7 @@ function showForm(button, target) {
 			$('#remove-anchor').click(function() { 
 				$('#form_action').hide(); 
 			});
-			connectInstanceTryForm();
+			connectInstanceTryForm('<?php echo $name ?>');
 			$('#caption').focus();
 		}
 	}
@@ -198,7 +198,7 @@ $properties['locale'] = array('type' => 'hidden');
 echo $this->partial('/partials/check-update-properties', array('entity' => 'Instance', 'context' => $context, 'properties' => $properties)) 
 ?>
 
-function connectInstanceTryForm()
+function connectInstanceTryForm(product)
 {
 <?php foreach ($properties as $propertyId => $property) : ?>
 	<?php if ($property['type'] == 'date') : ?>
@@ -244,7 +244,7 @@ function connectInstanceTryForm()
 
 			var xhttp = new XMLHttpRequest();
 			var route, target;
-			route = '<?php echo $this->url('commitment/try') ?>';
+			route = '<?php echo $this->url('commitment/try') ?>/' + product;
 			target = 'form_action';
 			xhttp.open('POST', route, true);
 			xhttp.onload = function () {
