--- a/view/ppit-document/public/home.phtml
+++ b/view/ppit-document/public/home.phtml
@@ -117,8 +117,8 @@ echo $this->partial('/partials/header');
     </div>
 </div>
 <div>&nbsp;</div>
-<div><a href="<?php echo $this->url('public/displayPage', array('directory' => $homeSpecs['blog']['directory'], 'name' => $homeSpecs['blog']['name'])) ?>">Blog</a></div>
-<div><a href="<?php echo $this->url('public/displayPage', array('directory' => $homeSpecs['legalNotices']['directory'], 'name' => $homeSpecs['legalNotices']['name'])) ?>">Mentions légales</a></div>
+<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="<?php echo $this->url('public/displayPage', array('directory' => $homeSpecs['blog']['directory'], 'name' => $homeSpecs['blog']['name'])) ?>">Blog</a></div>
+<div>&nbsp;</div>
 
 <script>
 
