--- a/view/ppit-document/public/home.phtml
+++ b/view/ppit-document/public/home.phtml
@@ -106,7 +106,7 @@ echo $this->partial('/partials/header');
 
 <!-- Contact us -->
 <div id="contact_us" style="text-align: center">
-	<a href="<?php echo $this->url('public/displayPage', array('directory' => $homeSpecs['blog']['directory'], 'name' => $homeSpecs['blog']['name'])) ?>">Blog</a>
+	<a href="<?php echo $this->url('public/displayBlog', array('directory' => 'blog', 'name' => key($context->getConfig('ppitDocument')['pages']['blog']))) ?>">Blog</a>
 	&nbsp;&nbsp;
 <?php foreach ($homeSpecs['contactUs'] as $menuItem) : ?>
 	<button type="button" class="btn btn-default" title="<?php echo $menuItem['title'][$context->getLocale()] ?>" onClick="location_href('<?php echo $menuItem['href'] ?>')">
