--- a/view/ppit-document/public/display-page.phtml
+++ b/view/ppit-document/public/display-page.phtml
@@ -1,5 +1,8 @@
 <?php
-$title = $document->properties['title'];
+if ($context->getLocale() == 'en_US' && $document->properties_en_us) $properties = $document->properties_en_us;
+elseif ($context->getLocale() == 'fr_FR' && $document->properties_fr_fr) $properties = $document->properties_fr_fr;
+else $properties = $document->properties;
+$title = $properties['title'];
 $this->headTitle($title);
 echo $this->partial('/partials/header');
 ?>
@@ -23,13 +26,18 @@ echo $this->partial('/partials/header');
 
 					<div id="document_part_panel_<?php echo $documentPart->id ?>">
 	
-	<?php if ($documentPart->image) : ?>
+	<?php
+	if ($context->getLocale() == 'en_US' && $documentPart->image_en_us) $image = $documentPart->image_en_us;
+	elseif ($context->getLocale() == 'fr_FR' && $documentPart->image_fr_fr) $image = $documentPart->image_fr_fr;
+	else $image = $documentPart->image;
+	?>
+	<?php if ($image) : ?>
 						<div align="center">
-		<?php if (array_key_exists('href', $documentPart->image)) : ?>
-							<a href="<?php echo $documentPart->image['href'] ?>" <?php if (array_key_exists('target', $documentPart->image)) echo 'target="'.$documentPart->image['target'].'"' ?>>
+		<?php if (array_key_exists('href', $image)) : ?>
+							<a href="<?php echo $image['href'] ?>" <?php if (array_key_exists('target', $image)) echo 'target="'.$image['target'].'"' ?>>
 		<?php endif;?>
 							<img 
-		<?php foreach ($documentPart->image as $attr => $value) : ?>
+		<?php foreach ($image as $attr => $value) : ?>
 			<?php if ($attr == 'src') : ?>
 				<?php if (is_array($value)) $value = $value[rand(0, count($value)-1)]?>
 								src="<?php echo $this->basePath($value) ?>"
@@ -38,18 +46,23 @@ echo $this->partial('/partials/header');
 			<?php endif;?>
 		<?php endforeach;?>
 							/>
-		<?php if (array_key_exists('href', $documentPart->image)) : ?>
+		<?php if (array_key_exists('href', $image)) : ?>
 							</a>
 		<?php endif;?>
 						</div>
 	<?php endif;?>
 			
+	<?php
+	if ($context->getLocale() == 'en_US' && $documentPart->content_en_us) $content = $documentPart->content_en_us;
+	elseif ($context->getLocale() == 'fr_FR' && $documentPart->content_fr_fr) $content = $documentPart->content_fr_fr;
+	else $content = $documentPart->content;
+	?>
 						<div><?php echo $documentPart->content ?></div>
 					</div>
 <?php endfor;?>
 
-<?php if (array_key_exists('actions', $content)) : ?>
-	<?php $first=true; foreach ($content['actions'] as $actionId => $action) : ?>
+<?php if (array_key_exists('actions', $specifications)) : ?>
+	<?php $first=true; foreach ($specifications['actions'] as $actionId => $action) : ?>
 		<?php if (!$first) : ?>
 					<div>&nbsp;</div>
 		<?php endif;?>
